OpenVDB volume artifacts with transparent plane in front #93246

Closed
opened 2021-11-20 19:32:02 +01:00 by Danny Austin · 15 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: AMD Radeon PRO W6800 ATI Technologies Inc. 4.5.14802 Core Profile Context FireGL 21.11.1 30.0.14005.1000

Blender Version
Broken: version: 3.0.0 Beta, branch: cycles-hip-binaries, commit date: 2021-11-09 21:58, hash: ab57a3cfac
Worked: (newest version of Blender that worked as expected)

Short description of error
When rendering using HIP devices, OpenVDB volumes do not show up at all. When using CPU OpenVDB volumes render with glitches

Exact steps for others to reproduce the error
Open file created previously in non HIP blender
enable HIP devices and/or CPU respectively
render
hip vdb.jpg

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: AMD Radeon PRO W6800 ATI Technologies Inc. 4.5.14802 Core Profile Context FireGL 21.11.1 30.0.14005.1000 **Blender Version** Broken: version: 3.0.0 Beta, branch: cycles-hip-binaries, commit date: 2021-11-09 21:58, hash: `ab57a3cfac` Worked: (newest version of Blender that worked as expected) **Short description of error** When rendering using HIP devices, OpenVDB volumes do not show up at all. When using CPU OpenVDB volumes render with glitches **Exact steps for others to reproduce the error** Open file created previously in non HIP blender enable HIP devices and/or CPU respectively render ![hip vdb.jpg](https://archive.blender.org/developer/F11833538/hip_vdb.jpg)
Author

Added subscriber: @DannyAustin

Added subscriber: @DannyAustin

Added subscriber: @brecht

Added subscriber: @brecht

Please try the latest 3.0, the cycles-hip-binaries branch was only a temporary branch for testing and is now outdated.
https://builder.blender.org/download/daily/

Please try the latest 3.0, the cycles-hip-binaries branch was only a temporary branch for testing and is now outdated. https://builder.blender.org/download/daily/
Author

Now using latest 3.0 build (Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-19 19:57, hash: fb0ea94c63)
OpenVDB now rendering in HIP GPU but shows the same glitches as CPU:
hip glitches open vdb.JPG

Same scene rendered on 2.93.5 looks fine with CPU.

Now using latest 3.0 build (Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-19 19:57, hash: `fb0ea94c63`) OpenVDB now rendering in HIP GPU but shows the same glitches as CPU: ![hip glitches open vdb.JPG](https://archive.blender.org/developer/F11833728/hip_glitches_open_vdb.JPG) Same scene rendered on 2.93.5 looks fine with CPU.
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Are you able to provide a copy of the scene with the VDB file so we can investigate the rendering artifacts?

Are you able to provide a copy of the scene with the VDB file so we can investigate the rendering artifacts?
Author

Hi, here is the file. The textures are packed and I have included one frame of the VDB smoke sim.
blend file

Hi, here is the file. The textures are packed and I have included one frame of the VDB smoke sim. [blend file ](https://setvisions-my.sharepoint.com/:u:/g/personal/danny_austin_setvisions_co_uk/ESGaGw2n_DtDhJ7w95IgjWYBHxuONj1dLqIlk_S7CF5ypA?e=AE980d)
Brecht Van Lommel changed title from OpenVDB issues in HIP Blender to OpenVDB volume artifacts with transparent plane in front 2021-11-22 15:31:03 +01:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I can confirm the issue.

The problem appears to be with the Aperature edge (scale up or down depending on ratio 0.001 object in front of the camera, without that it renders fine.

I can confirm the issue. The problem appears to be with the `Aperature edge (scale up or down depending on ratio 0.001` object in front of the camera, without that it renders fine.
Author

Ahhh yes! I'm using the Pro Lens addon.
Nice spot. I can work around that for now :)

Please let me know if you need anything else.

Ahhh yes! I'm using the Pro Lens addon. Nice spot. I can work around that for now :) Please let me know if you need anything else.

Marking a few bugs as high priority with the aim of fixing them for 3.1.

Marking a few bugs as high priority with the aim of fixing them for 3.1.

This issue was referenced by 75a051a6ab

This issue was referenced by 75a051a6abb86310496ada3b7f1a86bb9c7402bc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-05 20:58:39 +02:00

This issue was referenced by None@62912

This issue was referenced by None@62912
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93246
No description provided.