Fix T93246: Cycles wrong volume shading after transparent surface

The Russian roulette probability was not taken into account for volumes in all
cases. It should not be left out from the SD_HAS_ONLY_VOLUME case.